@@ -4,7 +4,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import lombok.val;
 import org.hamcrest.core.IsNull;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -50,6 +54,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Spliterator;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.okJson;
@@ -57,19 +62,24 @@ import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlMatching;
 import static org.hamcrest.CoreMatchers.hasItem;
 import static org.hamcrest.CoreMatchers.hasItems;
+import static org.hamcrest.Matchers.emptyString;
 import static org.hamcrest.Matchers.hasSize;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Named.named;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static uk.gov.hmcts.reform.hmc.WiremockFixtures.stubReturn200CaseDetailsByCaseId;
 import static uk.gov.hmcts.reform.hmc.WiremockFixtures.stubReturn200ForAllCasesFromDataStore;
+import static uk.gov.hmcts.reform.hmc.WiremockFixtures.stubReturn200ForAllCasesFromDataStorePaginated;
 import static uk.gov.hmcts.reform.hmc.WiremockFixtures.stubReturn200RoleAssignments;
 import static uk.gov.hmcts.reform.hmc.WiremockFixtures.stubReturn400WhileValidateHearingObject;
 import static uk.gov.hmcts.reform.hmc.WiremockFixtures.stubReturn404FromDataStore;
@@ -197,14 +207,14 @@ class HearingManagementControllerIT extends BaseTest {
     @Autowired
     private ChangeReasonsRepository changeReasonsRepository;
 
-    private static final String url = "/hearing";
+    private static final String URL_HEARING = "/hearing";
     public static final String USER_ID = "e8275d41-7f22-4ee7-8ed3-14644d6db096";
     public static final String JURISDICTION = "Jurisdiction1";
     public static final String CASE_TYPE = "CaseType1";
     public static final String ROLE_NAME = "Hearing Manage";
     public static final String ROLE_TYPE = "ORGANISATION";
     public static final String HEARING_NOT_FOUND_EXCEPTION = "No hearing found for reference: %s";
-    private static final String hearingCompletion = "/hearingActualsCompletion";
+    private static final String URL_HEARING_COMPLETION = "/hearingActualsCompletion";
 
     private static final String INSERT_CASE_HEARING_DATA_SCRIPT = "classpath:sql/insert-case_hearing_request.sql";
     private static final String CASE_HEARING_ACTUAL_HEARING = "classpath:sql/insert-caseHearings_actualhearings.sql";
@@ -213,11 +223,14 @@ class HearingManagementControllerIT extends BaseTest {
 
     private static final String GET_HEARINGS_DATA_SCRIPT = "classpath:sql/get-caseHearings_request.sql";
 
+    private static final String INSERT_CASE_HEARING_REQUEST_PAGINATED_DATA_SCRIPT =
+        "classpath:sql/insert-case_hearing_request_paginated.sql";
+
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn204_WhenHearingExists() throws Exception {
         stubRoleAssignments();
-        mockMvc.perform(get(url + "/2000000136" + "?isValid=true")
+        mockMvc.perform(get(URL_HEARING + "/2000000136" + "?isValid=true")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(204))
             .andExpect(header().exists("Latest-Hearing-Request-Version"))
@@ -227,7 +240,7 @@ class HearingManagementControllerIT extends BaseTest {
 
     @Test
     void shouldReturn400_WhenHearingIdIsInValid() throws Exception {
-        mockMvc.perform(get(url + "/1000000000" + "?isValid=true")
+        mockMvc.perform(get(URL_HEARING + "/1000000000" + "?isValid=true")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(400))
             .andReturn();
@@ -235,7 +248,7 @@ class HearingManagementControllerIT extends BaseTest {
 
     @Test
     void shouldReturn404_WhenHearingIdDoesNotExist() throws Exception {
-        mockMvc.perform(get(url + "/2000000001" + "?isValid=true")
+        mockMvc.perform(get(URL_HEARING + "/2000000001" + "?isValid=true")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(404))
             .andReturn();
@@ -244,7 +257,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenHearingExistsInDb() throws Exception {
-        mockMvc.perform(get(url + "/2000000000")
+        mockMvc.perform(get(URL_HEARING + "/2000000000")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
             .andReturn();
@@ -253,7 +266,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenHearingHasCancellationReasons() throws Exception {
-        mockMvc.perform(get(url + "/2000000012")
+        mockMvc.perform(get(URL_HEARING + "/2000000012")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
             .andExpect(jsonPath("$.requestDetails.cancellationReasonCodes").value(IsNull.notNullValue()))
@@ -263,7 +276,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenHearingStatusIsListed() throws Exception {
-        mockMvc.perform(get(url + "/2000000011")
+        mockMvc.perform(get(URL_HEARING + "/2000000011")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
             .andReturn();
@@ -272,7 +285,7 @@ class HearingManagementControllerIT extends BaseTest {
 
     @Test
     void shouldReturn404_WhenHearingIdIsInValidInDbAndParamIsFalse() throws Exception {
-        mockMvc.perform(get(url + "/2000000010" + "?isValid=false")
+        mockMvc.perform(get(URL_HEARING + "/2000000010" + "?isValid=false")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(404))
             .andReturn();
@@ -280,7 +293,7 @@ class HearingManagementControllerIT extends BaseTest {
 
     @Test
     void shouldReturn404_WhenHearingIdIsInValidInDb() throws Exception {
-        mockMvc.perform(get(url + "/2000000010")
+        mockMvc.perform(get(URL_HEARING + "/2000000010")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(404))
             .andReturn();
@@ -290,7 +303,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenIsValidIsNotProvided() throws Exception {
-        mockMvc.perform(get(url + "/2000000000")
+        mockMvc.perform(get(URL_HEARING + "/2000000000")
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
             .andReturn();
@@ -310,7 +323,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -337,7 +350,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -365,7 +378,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -381,7 +394,7 @@ class HearingManagementControllerIT extends BaseTest {
         updateHearingRequest.getHearingDetails().setPanelRequirements(TestingUtil.panelRequirements());
         updateHearingRequest.setCaseDetails(TestingUtil.caseDetails());
         stubReturn400WhileValidateHearingObject(updateHearingRequest);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(updateHearingRequest)))
@@ -395,7 +408,7 @@ class HearingManagementControllerIT extends BaseTest {
         HearingRequest createHearingRequest = new HearingRequest();
         createHearingRequest.setCaseDetails(TestingUtil.caseDetails());
         stubReturn400WhileValidateHearingObject(createHearingRequest);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -410,7 +423,7 @@ class HearingManagementControllerIT extends BaseTest {
         createHearingRequest.setHearingDetails(TestingUtil.hearingDetails());
         createHearingRequest.getHearingDetails().setPanelRequirements(TestingUtil.panelRequirements());
         stubReturn400WhileValidateHearingObject(createHearingRequest);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -425,7 +438,7 @@ class HearingManagementControllerIT extends BaseTest {
         createHearingRequest.setHearingDetails(TestingUtil.hearingDetails());
         createHearingRequest.setCaseDetails(TestingUtil.caseDetails());
         stubReturn400WhileValidateHearingObject(createHearingRequest);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -445,7 +458,7 @@ class HearingManagementControllerIT extends BaseTest {
         createHearingRequest.getPartyDetails().get(1).setIndividualDetails(TestingUtil
                                                                                .relatedPartyMandatoryFieldMissing());
         stubReturn400WhileValidateHearingObject(createHearingRequest);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -465,7 +478,7 @@ class HearingManagementControllerIT extends BaseTest {
         RoleAssignmentResponse roleAssignmentResponse = new RoleAssignmentResponse();
         roleAssignmentResponse.setRoleAssignments(resourceList);
         stubReturn200RoleAssignments(USER_ID, roleAssignmentResponse);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -490,7 +503,7 @@ class HearingManagementControllerIT extends BaseTest {
         RoleAssignmentResponse response = new RoleAssignmentResponse();
         response.setRoleAssignments(roleAssignmentList);
         stubReturn200RoleAssignments(USER_ID, response);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -509,7 +522,7 @@ class HearingManagementControllerIT extends BaseTest {
         stubSuccessfullyValidateHearingObject(createHearingRequest);
         stubRoleAssignments();
         stubReturn404FromDataStore(CASE_REFERENCE);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -546,7 +559,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction("invalidJurisdiction")
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(createHearingRequest)))
@@ -582,7 +595,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn404_WhenDeleteHearingIdIsInValid() throws Exception {
-        mockMvc.perform(delete(url + "/2000000001")
+        mockMvc.perform(delete(URL_HEARING + "/2000000001")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.deleteHearingRequest())))
@@ -594,7 +607,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn200_WhenDeleteHearingIdIsValid() throws Exception {
         DeleteHearingRequest deleteHearingRequest = TestingUtil.deleteHearingRequest();
-        mockMvc.perform(delete(url + "/2000000000")
+        mockMvc.perform(delete(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(deleteHearingRequest)))
@@ -612,14 +625,14 @@ class HearingManagementControllerIT extends BaseTest {
 
         assertTrue(StreamSupport.stream(spliterator, false)
                 .map(CancellationReasonsEntity::getCancellationReasonType)
-                .collect(Collectors.toList())
+                .toList()
                 .containsAll(CANCELLATION_REASON_CODES));
     }
 
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn400_WhenDeleteHearingIdIsNonNumeric() throws Exception {
-        mockMvc.perform(delete(url + "/200000000P")
+        mockMvc.perform(delete(URL_HEARING + "/200000000P")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.deleteHearingRequest())))
@@ -631,11 +644,12 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn400_WhenDeleteHearingIdStatusInValid() throws Exception {
         stubFor(WireMock.get(urlMatching("/cases/1111222233335555"))
-                    .willReturn(okJson("{\n"
-                                           + "\t\"jurisdiction\": \"Test\",\n"
-                                           + "\t\"case_type\": \"CaseType\"\n"
-                                           + "}")));
-        mockMvc.perform(delete(url + "/2000000011")
+                    .willReturn(okJson("""
+                                       {
+                                           "jurisdiction": "Test",
+                                           "case_type": "CaseType"
+                                       }""")));
+        mockMvc.perform(delete(URL_HEARING + "/2000000011")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.deleteHearingRequest())))
@@ -650,7 +664,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400_WhenCancellationReasonExceedsMaxLength() throws Exception {
         DeleteHearingRequest hearingRequest = new DeleteHearingRequest();
         hearingRequest.setCancellationReasonCodes(List.of("a".repeat(101)));
-        mockMvc.perform(delete(url + "/2000000001")
+        mockMvc.perform(delete(URL_HEARING + "/2000000001")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -667,7 +681,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400_WhenCancellationReasonIsNull() throws Exception {
         DeleteHearingRequest hearingRequest = new DeleteHearingRequest();
         hearingRequest.setCancellationReasonCodes(null);
-        mockMvc.perform(delete(url + "/2000000001")
+        mockMvc.perform(delete(URL_HEARING + "/2000000001")
                  .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -684,7 +698,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400_WhenCancellationReasonIsEmpty() throws Exception {
         DeleteHearingRequest hearingRequest = new DeleteHearingRequest();
         hearingRequest.setCancellationReasonCodes(Collections.emptyList());
-        mockMvc.perform(delete(url + "/2000000001")
+        mockMvc.perform(delete(URL_HEARING + "/2000000001")
                  .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -701,7 +715,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400_WhenCancellationContainsAnEmptyString() throws Exception {
         DeleteHearingRequest hearingRequest = new DeleteHearingRequest();
         hearingRequest.setCancellationReasonCodes(List.of("reason", ""));
-        mockMvc.perform(delete(url + "/2000000001")
+        mockMvc.perform(delete(URL_HEARING + "/2000000001")
                  .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -718,7 +732,7 @@ class HearingManagementControllerIT extends BaseTest {
         DeleteHearingRequest hearingRequest = new DeleteHearingRequest();
         final String cancellationReasonCode = "a".repeat(100);
         hearingRequest.setCancellationReasonCodes(List.of(cancellationReasonCode));
-        mockMvc.perform(delete(url + "/2000000000")
+        mockMvc.perform(delete(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -963,11 +977,12 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn201WhenUpdateHearingRequestIsValid() throws Exception {
         stubFor(WireMock.get(urlMatching("/cases/1111222233334444"))
-                    .willReturn(okJson("{\n"
-                                           + "\t\"jurisdiction\": \"Test\",\n"
-                                           + "\t\"case_type\": \"CaseType\"\n"
-                                           + "}")));
-        mockMvc.perform(put(url + "/2000000000")
+                    .willReturn(okJson("""
+                                       {
+                                           "jurisdiction": "Test",
+                                           "case_type": "CaseType"
+                                       }""")));
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.validUpdateHearingRequest())))
@@ -987,7 +1002,7 @@ class HearingManagementControllerIT extends BaseTest {
         hearingRequest.getPartyDetails().get(0).setIndividualDetails(TestingUtil.individualDetails());
         hearingRequest.getPartyDetails().get(1).setIndividualDetails(TestingUtil.individualDetails());
         hearingRequest.getCaseDetails().setCaseRef("9856815055686759");
-        mockMvc.perform(put(url + "/2000000012")
+        mockMvc.perform(put(URL_HEARING + "/2000000012")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1003,7 +1018,7 @@ class HearingManagementControllerIT extends BaseTest {
         updateHearingRequest.getHearingDetails().setAmendReasonCodes(Collections.emptyList());
         updateHearingRequest.setCaseDetails(TestingUtil.caseDetails());
         stubReturn400WhileValidateHearingObject(updateHearingRequest);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                  .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(updateHearingRequest)))
@@ -1021,7 +1036,7 @@ class HearingManagementControllerIT extends BaseTest {
         updateHearingRequest.getHearingDetails().setAmendReasonCodes(List.of("", "reason"));
         updateHearingRequest.setCaseDetails(TestingUtil.caseDetails());
         stubReturn400WhileValidateHearingObject(updateHearingRequest);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                 .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(updateHearingRequest)))
@@ -1036,13 +1051,13 @@ class HearingManagementControllerIT extends BaseTest {
         final Spliterator<ChangeReasonsEntity> spliterator = changeReasonsRepository.findAll().spliterator();
         assertEquals(2, spliterator.estimateSize());
         assertTrue(StreamSupport.stream(spliterator, false)
-                .map(ChangeReasonsEntity::getChangeReasonType).collect(Collectors.toList())
+                .map(ChangeReasonsEntity::getChangeReasonType).toList()
                 .containsAll(List.of("reason 1", "reason 2")));
     }
 
     @Test
     void shouldReturn404WhenUpdateHearingIdDoesNotMatchHearingIdInDB() throws Exception {
-        mockMvc.perform(put(url + "/2000000001")
+        mockMvc.perform(put(URL_HEARING + "/2000000001")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.updateHearingRequest())))
@@ -1058,7 +1073,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn400WhenUpdateHearingIdIsNonNumeric() throws Exception {
-        mockMvc.perform(put(url + "/200000000P")
+        mockMvc.perform(put(URL_HEARING + "/200000000P")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.updateHearingRequest())))
@@ -1068,7 +1083,7 @@ class HearingManagementControllerIT extends BaseTest {
 
     @Test
     void shouldReturn400WhenUpdateHearingIdIsInvalid() throws Exception {
-        mockMvc.perform(put(url + "/3000000000")
+        mockMvc.perform(put(URL_HEARING + "/3000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.updateHearingRequest())))
@@ -1080,7 +1095,7 @@ class HearingManagementControllerIT extends BaseTest {
 
     @Test
     void shouldReturn400WhenUpdateHearingIdIsTooLong() throws Exception {
-        mockMvc.perform(put(url + "/200000000000000")
+        mockMvc.perform(put(URL_HEARING + "/200000000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.updateHearingRequest())))
@@ -1095,7 +1110,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400WhenVersionNumberDoesNotMatchRequest() throws Exception {
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequest();
         hearingRequest.getRequestDetails().setVersionNumber(2);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1108,7 +1123,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     void shouldReturn400WhenRequestIsNull() throws Exception {
         UpdateHearingRequest hearingRequest = new UpdateHearingRequest();
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1126,7 +1141,7 @@ class HearingManagementControllerIT extends BaseTest {
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequest();
         RequestDetails updateRequestDetails = new RequestDetails();
         hearingRequest.setRequestDetails(updateRequestDetails);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1142,7 +1157,7 @@ class HearingManagementControllerIT extends BaseTest {
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequest();
         HearingDetails hearingDetails = new HearingDetails();
         hearingRequest.setHearingDetails(hearingDetails);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1193,7 +1208,7 @@ class HearingManagementControllerIT extends BaseTest {
         List<PanelPreference> panelPreferences = Arrays.asList(panelPreference, panelPreferenceTwo);
         panelRequirements.setPanelPreferences(panelPreferences);
         hearingRequest.getHearingDetails().setPanelRequirements(panelRequirements);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1224,7 +1239,7 @@ class HearingManagementControllerIT extends BaseTest {
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequest();
         CaseDetails caseDetails = new CaseDetails();
         hearingRequest.setCaseDetails(caseDetails);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1256,7 +1271,7 @@ class HearingManagementControllerIT extends BaseTest {
         List<CaseCategory> caseCategoryList = Collections.singletonList(category);
         hearingRequest.getCaseDetails().setCaseCategories(caseCategoryList);
         logger.info("request body: {}", objectMapper.writeValueAsString(hearingRequest));
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtDefinition)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1293,7 +1308,7 @@ class HearingManagementControllerIT extends BaseTest {
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequest();
         hearingRequest.setPartyDetails(listPartyDetails);
         logger.info("request body: {}", objectMapper.writeValueAsString(hearingRequest));
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1346,7 +1361,7 @@ class HearingManagementControllerIT extends BaseTest {
 
         final String unexpectedTypeForDow = "Unsupported type for dow";
         logger.info("request body: {}", objectMapper.writeValueAsString(hearingRequest));
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1374,7 +1389,7 @@ class HearingManagementControllerIT extends BaseTest {
         hearingRequest.getHearingDetails().getHearingWindow().setDateRangeEnd(null);
         hearingRequest.getHearingDetails().getHearingWindow().setDateRangeStart(null);
         hearingRequest.getHearingDetails().getHearingWindow().setFirstDateTimeMustBe(null);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1391,7 +1406,7 @@ class HearingManagementControllerIT extends BaseTest {
         hearingRequest.getHearingDetails().getHearingWindow().setDateRangeStart(LocalDate.parse("2017-03-01"));
         hearingRequest.getHearingDetails().getHearingWindow().setDateRangeEnd(LocalDate.parse("2017-03-01"));
         hearingRequest.getHearingDetails().getHearingWindow().setFirstDateTimeMustBe(LocalDateTime.now());
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                  .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1406,7 +1421,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400WhenHearingChannelFieldIsNull() throws Exception {
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequest();
         hearingRequest.getHearingDetails().setHearingChannels(null);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                  .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1421,7 +1436,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400WhenPartyIndividualAndOrgDetailsNull() throws Exception {
         UpdateHearingRequest request = TestingUtil.updateHearingRequest();
         request.setPartyDetails(TestingUtil.partyDetails());
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(request)))
@@ -1439,7 +1454,7 @@ class HearingManagementControllerIT extends BaseTest {
         request.setPartyDetails(TestingUtil.partyDetails());
         request.getPartyDetails().get(0).setIndividualDetails(TestingUtil.individualDetails());
         request.getPartyDetails().get(0).setOrganisationDetails(TestingUtil.organisationDetails());
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(request)))
@@ -1452,7 +1467,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn400WhenUpdateHearingStatusIsInvalid() throws Exception {
-        mockMvc.perform(put(url + "/2000000011")
+        mockMvc.perform(put(URL_HEARING + "/2000000011")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(TestingUtil.updateHearingRequest())))
@@ -1474,7 +1489,7 @@ class HearingManagementControllerIT extends BaseTest {
         hearingRequest.getPartyDetails().get(0).getIndividualDetails().getRelatedParties()
             .get(0).setRelationshipType("a".repeat(10));
         hearingRequest.getCaseDetails().setCaseRef("9856815055686759");
-        mockMvc.perform(put(url + "/2000000012")
+        mockMvc.perform(put(URL_HEARING + "/2000000012")
                  .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1489,7 +1504,7 @@ class HearingManagementControllerIT extends BaseTest {
         stubRoleAssignments();
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequestWithPartyDetails(false);
         hearingRequest.getCaseDetails().setCaseRef("9372710950276233");
-        mockMvc.perform(put(url + "/2000000024")
+        mockMvc.perform(put(URL_HEARING + "/2000000024")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1506,7 +1521,7 @@ class HearingManagementControllerIT extends BaseTest {
         UpdateHearingRequest hearingRequest =
             TestingUtil.updateHearingRequestWithPartyDetails(true);
         hearingRequest.getCaseDetails().setCaseRef("9372710950276233");
-        mockMvc.perform(put(url + "/2000000024")
+        mockMvc.perform(put(URL_HEARING + "/2000000024")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1521,7 +1536,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400_WhenCaseRefHasInvalidFormat_UpdateHearing() throws Exception {
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequest();
         hearingRequest.getCaseDetails().setCaseRef("1111222233334445");
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1544,7 +1559,7 @@ class HearingManagementControllerIT extends BaseTest {
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
         hearingRequest.getCaseDetails().setCaseRef("1111222233334445");
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1566,7 +1581,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1593,7 +1608,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        val result = mockMvc.perform(post(url)
+        val result = mockMvc.perform(post(URL_HEARING)
                                          .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                                          .contentType(MediaType.APPLICATION_JSON_VALUE)
                                          .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1645,7 +1660,7 @@ class HearingManagementControllerIT extends BaseTest {
         hearingRequest.getHearingDetails().setDuration(duration);
         hearingRequest.getCaseDetails().setCaseRef("9372710950276233");
 
-        mockMvc.perform(put(url + "/" + hearingId)
+        mockMvc.perform(put(URL_HEARING + "/" + hearingId)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1661,7 +1676,7 @@ class HearingManagementControllerIT extends BaseTest {
     void shouldReturn400_WhenHearingRequestHearingPartyTechPartyId_NotFound() throws Exception {
         HearingRequest hearingRequest = getHearingRequest("unknown");
         stubSuccessfullyValidateHearingObject(hearingRequest);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                  .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1683,7 +1698,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .header(HMCTS_DEPLOYMENT_ID, "TEST")
@@ -1705,7 +1720,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1726,7 +1741,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1747,7 +1762,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .header(HMCTS_DEPLOYMENT_ID, "a".repeat(41))
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
@@ -1771,7 +1786,7 @@ class HearingManagementControllerIT extends BaseTest {
             .jurisdiction(JURISDICTION)
             .build();
         stubReturn200CaseDetailsByCaseId(CASE_REFERENCE, caseDetails);
-        mockMvc.perform(post(url)
+        mockMvc.perform(post(URL_HEARING)
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .header(HMCTS_DEPLOYMENT_ID, "ABA1")
                             .header(HMCTS_DEPLOYMENT_ID, "TEST")
@@ -1786,7 +1801,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldReturn404WhenHearingIdNotAvailableHearingCompletion() throws Exception {
-        mockMvc.perform(post(hearingCompletion + "/2000000001")
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/2000000001")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(404))
@@ -1798,7 +1813,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldReturn404WhenHearingIdIsNotValidHearingCompletion() throws Exception {
-        mockMvc.perform(post(hearingCompletion + "/30000000")
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/30000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(400))
@@ -1810,7 +1825,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldReturn404WhenHearingStatusIsNotVaidHearingCompletion() throws Exception {
-        mockMvc.perform(post(hearingCompletion + "/2000000009")
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/2000000009")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(400))
@@ -1822,7 +1837,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldReturn404WhenHearingStatusListedAndMinStartDateIsBeforeTodayHearingCompletion() throws Exception {
-        mockMvc.perform(post(hearingCompletion + "/2000000010")
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/2000000010")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
@@ -1833,11 +1848,12 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldReturn404WhenActualHearingMissingForHearingResponseHearingCompletion() throws Exception {
         stubFor(WireMock.get(urlMatching("/cases/9372710950276233"))
-                    .willReturn(okJson("{\n"
-                                           + "\t\"jurisdiction\": \"Test\",\n"
-                                           + "\t\"case_type\": \"CaseType\"\n"
-                                           + "}")));
-        mockMvc.perform(post(hearingCompletion + "/2000000012")
+                    .willReturn(okJson("""
+                                       {
+                                           "jurisdiction": "Test",
+                                           "case_type": "CaseType"
+                                       }""")));
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/2000000012")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(400))
@@ -1850,7 +1866,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldReturn200WhenActualHearingDayMissingForResultTypeAdjourned() throws Exception {
-        mockMvc.perform(post(hearingCompletion + "/2000000013")
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/2000000013")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
@@ -1860,7 +1876,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldReturn200WhenActualHearingDayMissingForResultTypeCompleted() throws Exception {
-        mockMvc.perform(post(hearingCompletion + "/2000000015")
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/2000000015")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
@@ -1870,7 +1886,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldReturn200WhenActualHearingDayExistsForCanceledResultTypeResponseHearingCompletion() throws Exception {
-        mockMvc.perform(post(hearingCompletion + "/2000000014")
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/2000000014")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
@@ -1881,7 +1897,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, CASE_HEARING_ACTUAL_HEARING})
     void shouldUpdateHearingCompletion() throws Exception {
         stubRoleAssignments();
-        mockMvc.perform(post(hearingCompletion + "/2000000000")
+        mockMvc.perform(post(URL_HEARING_COMPLETION + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE))
             .andExpect(status().is(200))
@@ -1892,7 +1908,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_DATA_SCRIPT})
     void shouldReturn200WhenHearingWindowIsNotPresent() throws Exception {
         UpdateHearingRequest hearingRequest = TestingUtil.updateHearingRequestWithoutHearingWindow(1);
-        mockMvc.perform(put(url + "/2000000000")
+        mockMvc.perform(put(URL_HEARING + "/2000000000")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
@@ -1911,13 +1927,228 @@ class HearingManagementControllerIT extends BaseTest {
         hearingRequest.getPartyDetails().get(0).setIndividualDetails(individualDetails);
         hearingRequest.getPartyDetails().get(1).setIndividualDetails(individualDetails);
         hearingRequest.getCaseDetails().setCaseRef("9856815055686759");
-        mockMvc.perform(put(url + "/2000000012")
+        mockMvc.perform(put(URL_HEARING + "/2000000012")
                             .header(SERVICE_AUTHORIZATION, serviceJwtXuiWeb)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(objectMapper.writeValueAsString(hearingRequest)))
             .andExpect(status().is(201))
             .andReturn();
         assertChangeReasons();
+    }
+
+    @Nested
+    class GetHearingsForListOfCases {
+
+        @Test
+        void shouldFailValidationNoCaseTypeParameter() throws Exception {
+            String request = """
+                {
+                    "pageSize": 10,
+                    "offset": 0,
+                    "caseReferences": [
+                        {"caseReference": "1234123412341238"}
+                    ]
+                }""";
+
+            mockMvc.perform(post("/hearings")
+                                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                                .content(request))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.detail").value("Required parameter 'caseTypeId' is not present."));
+        }
+
+        @ParameterizedTest(name = "{index}: {0}")
+        @MethodSource("bodyValidationErrors")
+        void shouldFailValidationBody(String request, List<String> expectedErrors) throws Exception {
+            mockMvc.perform(post("/hearings?caseTypeId=" + CASE_TYPE)
+                                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                                .content(request))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.errors", hasSize(expectedErrors.size())))
+                .andExpect(jsonPath("$.errors", hasItems(expectedErrors.toArray())));
+        }
+
+        @Test
+        @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, INSERT_CASE_HEARING_REQUEST_PAGINATED_DATA_SCRIPT})
+        void shouldGetHearingsForListOfCases() throws Exception {
+            List<String> caseReferences = List.of("1234123412341238", "5678567856785678");
+            stubReturn200ForAllCasesFromDataStorePaginated(10, 0, caseReferences, CASE_TYPE, caseReferences);
+
+            String request = createGetHearingRequest(10, 0, caseReferences);
+
+            mockMvc.perform(post("/hearings?caseTypeId=" + CASE_TYPE)
+                                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                                .content(request))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)))
+                .andExpect(jsonPath("$[0].caseRef").value("1234123412341238"))
+                .andExpect(jsonPath("$[0].caseHearings", hasSize(1)))
+                .andExpect(jsonPath("$[0].caseHearings[0].hearingID").value("2000000000"));
+        }
+
+        @Test
+        @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT})
+        void shouldReturnNoHearingsWhenNoCasesFound() throws Exception {
+            List<String> caseReferences = List.of("5678567856785678");
+            stubReturn200ForAllCasesFromDataStorePaginated(5, 0, caseReferences, CASE_TYPE, Collections.emptyList());
+
+            String request = createGetHearingRequest(5, 0, caseReferences);
+
+            mockMvc.perform(post("/hearings?caseTypeId=" + CASE_TYPE)
+                                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                                .content(request))
+                .andExpect(status().isOk())
+                .andExpect(content().string(emptyString()));
+        }
+
+        @Test
+        @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT})
+        void shouldReturnNoHearingsWhenNoHearingsForCaseFound() throws Exception {
+            List<String> caseReferences = List.of("5678567856785678");
+            stubReturn200ForAllCasesFromDataStorePaginated(5, 1, caseReferences, CASE_TYPE, caseReferences);
+
+            String request = createGetHearingRequest(5, 1, caseReferences);
+
+            mockMvc.perform(post("/hearings?caseTypeId=" + CASE_TYPE)
+                                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                                .content(request))
+                .andExpect(status().isOk())
+                .andExpect(content().string(emptyString()));
+        }
+
+        private String createGetHearingRequest(int pageSize, int offset, List<String> caseReferences) {
+            String caseReferenceItems =
+                caseReferences == null || caseReferences.isEmpty() ? "" :
+                    caseReferences.stream()
+                        .map(caseRef -> "{\"caseReference\": \"" + caseRef + "\"}")
+                        .collect(Collectors.joining(", "));
+
+            return """
+                {
+                    "pageSize": %d,
+                    "offset": %d,
+                    "caseReferences": [%s]
+                }""".formatted(pageSize, offset, caseReferenceItems);
+        }
+
+        private static Stream<Arguments> bodyValidationErrors() {
+            return Stream.of(
+                arguments(
+                    named("HasNoPageSize",
+                          """
+                          {
+                              "offset": 0,
+                              "caseReferences": [
+                                  {"caseReference": "1234123412341238"}
+                              ]
+                          }"""),
+                    List.of("Page size is mandatory")
+                ),
+                arguments(
+                    named("PageSizeNotPositive",
+                          """
+                          {
+                              "pageSize": 0,
+                              "offset": 0,
+                              "caseReferences": [
+                                  {"caseReference": "1234123412341238"}
+                              ]
+                          }"""),
+                    List.of("Page size can not be less than one")
+                ),
+                arguments(
+                    named("HasNoOffset",
+                          """
+                          {
+                              "pageSize": 10,
+                              "caseReferences": [
+                                  {"caseReference": "1234123412341238"}
+                              ]
+                          }"""),
+                    List.of("Offset is mandatory")
+                ),
+                arguments(
+                    named("OffsetLessThanZero",
+                          """
+                          {
+                              "pageSize": 10,
+                              "offset": -1,
+                              "caseReferences": [
+                                  {"caseReference": "1234123412341238"}
+                              ]
+                          }"""),
+                    List.of("Offset can not be less than 0")
+                ),
+                arguments(
+                    named("HasNoCaseReferences",
+                          """
+                          {
+                              "pageSize": 10,
+                              "offset": 0
+                          }"""),
+                    List.of("At least one case reference must be provided")
+                ),
+                arguments(
+                    named("CaseReferencesEmpty",
+                          """
+                          {
+                              "pageSize": 10,
+                              "offset": 0,
+                              "caseReferences": []
+                          }"""),
+                    List.of("At least one case reference must be provided")
+                ),
+                arguments(
+                    named("CaseReferencesCaseReferenceBlank",
+                          """
+                          {
+                              "pageSize": 10,
+                              "offset": 0,
+                              "caseReferences": [
+                                  {"caseReference": ""}
+                              ]
+                          }"""
+                    ),
+                    List.of("Case ref has invalid length", "Case ref can not be empty", "Invalid case reference")
+                ),
+                arguments(
+                    named("CaseReferencesCaseReferenceLessThanPermittedLength",
+                          """
+                          {
+                              "pageSize": 10,
+                              "offset": 0,
+                              "caseReferences": [
+                                  {"caseReference": "123412341234127"}
+                              ]
+                          }"""),
+                    List.of("Case ref has invalid length")
+                ),
+                arguments(
+                    named("CaseReferencesCaseReferenceMoreThanPermittedLength",
+                          """
+                          {
+                              "pageSize": 10,
+                              "offset": 0,
+                              "caseReferences": [
+                                  {"caseReference": "12341234123412346"}
+                              ]
+                          }"""),
+                    List.of("Case ref has invalid length")
+                ),
+                arguments(
+                    named("CaseReferencesCaseReferenceFailedLuhnCheck",
+                          """
+                          {
+                              "pageSize": 10,
+                              "offset": 0,
+                              "caseReferences": [
+                                  {"caseReference": "1234123412341230"}
+                              ]
+                          }"""),
+                    List.of("Invalid case reference")
+                )
+            );
+        }
     }
 
     private final String serviceJwtDefinition = generateDummyS2SToken("ccd_definition");
